2005-12-18  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Use THREADS_CFLAGS and _LIBS. Don't need	CAMEL_LIBS.

	* em-account-editor.c: Use gstdio wrappers. Construct pathnames of
	glade files at run-time.

2005-12-17  Tor Lillqvist  <tml@novell.com>

	* mail-mt.c: Add copyright blurb. Use separate flag field to
	indicate whether a pthread_t field is valid or not. Use
	e_util_pthread_id() in debugging output.

	* mail-mt.c
	* mail-session.c
	* mail-vfolder.c: Include just <gtk/gtk.h> and not a handful of
	individual gtk headers. Harmonize #include order and syntax. Use
	pthread_equal() to compare pthread_t values.

	(em_channel_setup): Call g_io_channel_win32_new_socket() on Win32
	instead of g_io_channel_unix_new(). This avoids the occasional
	"giowin32.c:1661: 12 is both a file descriptor and a socket, file
	descriptor interpretation assumed." style warnings, which indicate
	a real problem in this case.

	* mail-ops.c: Use gstdio wrappers. Open file in binary mode.

	* mail-signature-editor.c
	* mail-tools.c
	* mail-vfolder.c
	* message-list.c
	* message-tag-followup.c: Beautify #include order and syntax. Use
	gstdio wrappers. Construct pathnames of files to be read at
	run-time instead of using compile-time paths.

	* mail-tools.c (mail_tool_get_local_movemail_path): Not used, put
	in #if 0.

	* importers/elm-importer.c
	* importers/evolution-mbox-importer.c
	* importers/evolution-outlook-importer.c
	* importers/mail-importer.c
	* importers/netscape-importer.c
	* importers/pine-importer.c: Use GLib API when
	applicable.

2005-12-12  Karsten Bräckelmann  <guenther@rudersport.de>

	* em-folder-view.c: Mail Context Menu re-ordered correctly,
	fixes bug #323140.

2005-12-12  Shreyas Srinivasan  <sshreyas@novell.com>

	* mail.error.xml: Fix #47857
	
2005-12-05  Shi Pu  <shi.pu@sun.com>

	See bug ** 323253

	* mail-send-recv.c: (format_url):
	If url->host is NULL or it is emtpy,
	don't print it out in send & receive dialog.
